--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,12 +28,15 @@ S3method(update,design)
 S3method(vcov,targeted)
 export(NB)
 export(NB2)
+export(RATE)
+export(RATE.surv)
 export(SL)
 export(aipw)
 export(ate)
 export(calibrate)
 export(calibration)
 export(cate)
+export(crr)
 export(cv)
 export(design)
 export(expand.list)
@@ -76,6 +79,7 @@ importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,dnorm)
+importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
 importFrom(stats,lm)
@@ -93,6 +97,7 @@ importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
+importFrom(survival,survfit)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(targeted, .registration=TRUE)
