--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,7 @@ Date: 2022-10-25
 Authors@R: c(person(given = "Klaus K.",
                     family = "Holst",
                     role = c("aut", "cre"),
-                    email = "klaus@holst.it",
-                    comment = c(ORCID="0000-0002-1364-6789")),
+                    email = "klaus@holst.it")),
              person(given = "Andreas",
                     family = "Nordland",
                     role = c("aut"),
