--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -6,12 +6,11 @@ Date: 2022-10-25
 Authors@R: c(person(given = "Klaus K.",
                     family = "Holst",
                     role = c("aut", "cre"),
-                    email = "klaus@holst.it")),
+                    email = "klaus@holst.it"),
              person(given = "Andreas",
                     family = "Nordland",
                     role = c("aut"),
-                    email = "andreasnordland@gmail.com")
-             )
+                    email = "andreasnordland@gmail.com"))
 Author: Klaus K. Holst [aut, cre], Andreas Nordland [aut]
 Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Various methods for targeted and semiparametric inference including
