riskreg_cens doubly robust survival regression

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -44,6 +44,7 @@ export(isoregw)
 export(ml_model)
 export(pava)
 export(riskreg)
+export(riskreg_cens)
 export(riskreg_fit)
 export(riskreg_mle)
 export(scoring)
