riskreg_cens doubly robust survival regression

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(ate)
 export(calibrate)
 export(calibration)
 export(cate)
+export(cate_link)
 export(crr)
 export(cv)
 export(design)
@@ -44,6 +45,7 @@ export(isoregw)
 export(ml_model)
 export(pava)
 export(riskreg)
+export(riskreg_cens)
 export(riskreg_fit)
 export(riskreg_mle)
 export(scoring)
