--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -51,6 +51,7 @@ jobs:
       - name: Webpage deployment
         if: success() && contains('refs/heads/master', github.ref)
         run: |
+          Rscript -e 'remotes::install_github("kkholst/targeted")'
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
