--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(predict,NB2)
 S3method(predict,calibration)
 S3method(predict,density)
 S3method(predict,ml_model)
+S3method(predict,riskreg.targeted)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
