roxygen; namespace updated; predict.riskreg updated

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -82,6 +82,7 @@ importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,dnorm)
+importFrom(stats,formula)
 importFrom(stats,gaussian)
 importFrom(stats,glm)
 importFrom(stats,glm.fit)
