--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -93,5 +93,4 @@ jobs:
         run: |
           python3 -m pip install --use-feature=2020-resolver -U setuptools twine
           cd build/python/targeted
-          python3 -m twine upload wheelhouse/*.whl
-
+          python3 -m twine upload --skip-existing wheelhouse/*.whl
