--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cibuildwheel==2.1.3
+          pip install cibuildwheel==1.10.0
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
@@ -76,7 +76,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cibuildwheel==2.1.3
+          pip install cibuildwheel==1.10.0
       - name: Build wheels
         env:
           CIBW_BEFORE_BUILD: pip install cmake
@@ -86,7 +86,7 @@ jobs:
           make py_export pkg=targeted
           cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
       - name: Upload to PyPi
-        #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
