--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cibuildwheel==1.10.0
+          pip install cibuildwheel --upgrade
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
@@ -50,7 +50,7 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          python3 -m pip install -U setuptools twine
           cd build/python/targeted
           python3 -m twine upload dist/*.tar.gz
           python3 -m twine upload wheelhouse/*.whl
@@ -76,7 +76,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cibuildwheel==1.10.0
+          pip install cibuildwheel --upgrade
       - name: Build wheels
         env:
           CIBW_BEFORE_BUILD: pip install cmake
@@ -91,6 +91,6 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          python3 -m pip install -U setuptools twine
           cd build/python/targeted
           python3 -m twine upload --skip-existing wheelhouse/*.whl
