--- a/.github/workflows/r_check.yaml
+++ b/.github/workflows/r_check.yaml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - uses: r-lib/actions/setup-r@master
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
-      - uses: r-lib/actions/setup-tinytex@v1
+      - uses: r-lib/actions/setup-tinytex@v2
       - run: tlmgr --version
 
       - name: Install dependencies
