--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@
 cmake_minimum_required(VERSION 3.3)
 project(target VERSION 0.1 DESCRIPTION "Targeted Inference Library" LANGUAGES CXX)
 
-option(COTIRE  "precompiled headers" OFF)
-option(USE_PKG_LIB  "Force use of libraries supplied with this package instead of system libraries" OFF)
-option(CODE_COVERAGE "Enable coverage reporting" OFF)
+option (COTIRE  "precompiled headers" OFF)
+option (USE_PKG_LIB  "Force use of libraries supplied with this package instead of system libraries" ON)
+option (CODE_COVERAGE "Enable coverage reporting" OFF)
 option (BUILD_TESTING "Build the testing tree." ON)
 option (USE_SANITIZER "Define CXX Sanitizer (Address, Undefined, Leak, Memory)" "")
 
@@ -61,8 +61,8 @@ if (NOT USE_PKG_LIB)
 else()
   message ([Main]  " Using Armadillo included in this package")
   find_package(LAPACK REQUIRED)
-  add_subdirectory("lib/armadillo")
-  include_directories("lib/armadillo/include")
+  add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/lib/armadillo")
+  include_directories("${CMAKE_CURRENT_SOURCE_DIR}/lib/armadillo/include")
 endif ()
 message( [Main] " ARMADILLO_LIBRARIES = ${ARMADILLO_LIBRARIES}")
 message( [Main] " ARMADILLO_INCLUDE_DIRS = ${ARMADILLO_INCLUDE_DIRS}")
