--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: ['3.10']
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.0
@@ -29,12 +29,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cibuildwheel==1.10.0
+          pip install cibuildwheel --upgrade
       - name: Build wheels
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-          CIBW_SKIP: cp27-* cp35-* pp*
+          CIBW_SKIP: cp27-* cp35-* cp36-* pp*
           CIBW_BEFORE_BUILD: yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../..
         run: |
           make py_export pkg=targeted
@@ -50,7 +50,7 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          python3 -m pip install -U setuptools twine
           cd build/python/targeted
           python3 -m twine upload dist/*.tar.gz
           python3 -m twine upload wheelhouse/*.whl
@@ -59,24 +59,24 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: ['3.10']
     steps:
       - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.0
+        uses: styfle/cancel-workflow-action@0.10.0
         with:
           access_token: ${{ github.token }}
       - name: Checkout repository incl. submodules
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           submodules: recursive
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install cibuildwheel==1.10.0
+          pip install cibuildwheel --upgrade
       - name: Build wheels
         env:
           CIBW_BEFORE_BUILD: pip install cmake
@@ -86,11 +86,11 @@ jobs:
           make py_export pkg=targeted
           cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
       - name: Upload to PyPi
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: |
-          python3 -m pip install --use-feature=2020-resolver -U setuptools twine
+          python3 -m pip install -U setuptools twine
           cd build/python/targeted
           python3 -m twine upload --skip-existing wheelhouse/*.whl
