--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -52,8 +52,8 @@ jobs:
         run: |
           python3 -m pip install -U setuptools twine
           cd build/python/targeted
-          python3 -m twine upload dist/*.tar.gz
-          python3 -m twine upload wheelhouse/*.whl
+          python3 -m twine upload --skip-existing dist/*.tar.gz
+          python3 -m twine upload --skip-existing wheelhouse/*.whl
 
   macosx_build:
     runs-on: macos-latest
