--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -27,6 +27,7 @@ S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(update,design)
 S3method(vcov,targeted)
+export(GLM)
 export(NB)
 export(NB2)
 export(RATE)
@@ -38,6 +39,8 @@ export(calibrate)
 export(calibration)
 export(cate)
 export(cate_link)
+export(cc)
+export(ccc)
 export(crr)
 export(cv)
 export(design)
