cate: stratify argument and clean-up

--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -14,8 +14,10 @@ Authors@R: c(person(given = "Klaus K.",
 Author: Klaus K. Holst [aut, cre], Andreas Nordland [aut]
 Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Various methods for targeted and semiparametric inference including
-	     augmented inverse probability weighted estimators for missing data and
-	     causal inference (Bang and Robins (2005) <doi:10.1111/j.1541-0420.2005.00377.x>)
+	     augmented inverse probability weighted (AIPW) estimators for missing data and
+	     causal inference (Bang and Robins (2005) <doi:10.1111/j.1541-0420.2005.00377.x>),
+         variable importance and conditional average treatment effects (CATE)
+         (van der Laan (2006) <doi:10.2202/1557-4679.1008>),
 	     and estimators for risk differences and relative risks (Richardson et al. (2017)
 	     <doi:10.1080/01621459.2016.1192546>).
 Depends:
