--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(update,design)
 S3method(vcov,targeted)
+export(ML)
 export(NB)
 export(NB2)
 export(RATE)
@@ -91,11 +92,13 @@ importFrom(stats,lm.fit)
 importFrom(stats,lm.wfit)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,reformulate)
 importFrom(stats,runif)
 importFrom(stats,terms)
 importFrom(stats,update)
