--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -34,6 +34,7 @@ export(RATE)
 export(RATE.surv)
 export(SL)
 export(aipw)
+export(alean)
 export(ate)
 export(calibrate)
 export(calibration)
@@ -83,6 +84,7 @@ importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
 importFrom(stats,dnorm)
+importFrom(stats,drop.terms)
 importFrom(stats,formula)
 importFrom(stats,gaussian)
 importFrom(stats,glm)
