--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -18,8 +18,9 @@ Description: Various methods for targeted and semiparametric inference including
 	     causal inference (Bang and Robins (2005) <doi:10.1111/j.1541-0420.2005.00377.x>),
          variable importance and conditional average treatment effects (CATE)
          (van der Laan (2006) <doi:10.2202/1557-4679.1008>),
-	     and estimators for risk differences and relative risks (Richardson et al. (2017)
-	     <doi:10.1080/01621459.2016.1192546>).
+	     estimators for risk differences and relative risks (Richardson et al. (2017)
+	     <doi:10.1080/01621459.2016.1192546>), assumption lean inference for generalized
+         linear model parameters (Vansteelandt et al. (2022) <doi:10.1111/rssb.12504>).
 Depends:
     R (>= 4.0),
     lava (>= 1.7.0)
