--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -49,7 +49,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Webpage deployment
-        if: success() && contains('refs/heads/master', github.ref)
+        if: success() && contains('refs/heads/main', github.ref)
         run: |
           Rscript -e 'remotes::install_github("kkholst/targeted")'
           git config --local user.name "$GITHUB_ACTOR"
@@ -57,7 +57,7 @@ jobs:
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
 
       - name: Code Coverage
-        if: success() && contains('refs/heads/master', github.ref)
+        if: success() && contains('refs/heads/main', github.ref)
         run: covr::codecov(type=c("tests", "examples"))
         shell: Rscript {0}
 
