--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -34,7 +34,7 @@ jobs:
         env:
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_MANYLINUX_I686_IMAGE: manylinux2014
-          CIBW_SKIP: cp27-* cp35-* *musl* pp*
+          CIBW_SKIP: cp27-* cp35-* cp36-* *musl* pp*
           CIBW_BEFORE_BUILD: yum install -y make lapack-devel blas-devel python-devel; pip install cmake; cd lib/armadillo; cmake -B build && cd build; make install; cd ../../..
         run: |
           make py_export pkg=targeted
@@ -80,11 +80,11 @@ jobs:
       - name: Build wheels
         env:
           CIBW_BEFORE_BUILD: pip install cmake
-          CIBW_SKIP: cp27-* cp35-* pp*
+          CIBW_SKIP: cp27-* cp35-* cp36-* pp*
           CIBW_ARCHS: x86_64 arm64
         run: |
           make py_export pkg=targeted
-          cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
+          CMAKE_OSX_ARCHITECTURES="x86_64;arm64" cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
       - name: Upload to PyPi
         # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         env:
