--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -81,10 +81,13 @@ jobs:
         env:
           CIBW_BEFORE_BUILD: pip install cmake
           CIBW_SKIP: cp27-* cp35-* cp36-* pp*
-          CIBW_ARCHS: x86_64 arm64
+          CIBW_ARCHS: arm64 x86_64
+          CIBW_ARCHS_MACOS: x86_64 arm64 universal2
+          CIBW_ARCHS_MACOS: x86_64 arm64 universal2
+          CMAKE_OSX_ARCHITECTURES: arm64;x86_64
         run: |
           make py_export pkg=targeted
-          CMAKE_OSX_ARCHITECTURES="x86_64;arm64" cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
+          cd build/python/targeted; python3 -m cibuildwheel --output-dir wheelhouse
       - name: Upload to PyPi
         # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         env:
