clean-up cross-compilation

--- a/.github/workflows/py_wheels.yaml
+++ b/.github/workflows/py_wheels.yaml
@@ -82,7 +82,7 @@ jobs:
           CIBW_BEFORE_BUILD: pip install cmake
           CIBW_SKIP: cp27-* cp35-* cp36-* pp*
           CIBW_ARCHS: arm64 x86_64
-          CIBW_ARCHS_MACOS: x86_64 arm64 universal2
+          CIBW_ARCHS_MACOS: x86_64 arm64
           CMAKE_OSX_ARCHITECTURES: arm64;x86_64
         run: |
           make py_export pkg=targeted
