--- a/python-package/targeted/CMakeLists.txt
+++ b/python-package/targeted/CMakeLists.txt
@@ -5,10 +5,10 @@ set(RUN_TESTS TRUE)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 if(APPLE)
-  if (CMAKE_TOOLCHAIN_FILE)
-    # This is in cross compiling condition.
-    set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
-  endif()
+  # if (CMAKE_TOOLCHAIN_FILE)
+  #   # This is in cross compiling condition.
+  #   set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
+  # endif()
   set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
 endif()
 project(${target} CXX)
