--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,13 @@ charset = utf-8
 end_of_line = lf
 trim_trailing_whitespace = true
 
-[*.{h,.hpp,cpp,c}]
+[*.{h,hpp,cpp,c}]
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+tab_width = 2
+
+[*.{R,r}]
 insert_final_newline = true
 indent_style = space
 indent_size = 2
