non-dominated sets c++ and R interface

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -46,6 +46,7 @@ export(design)
 export(expand.list)
 export(isoregw)
 export(ml_model)
+export(nondom)
 export(pava)
 export(riskreg)
 export(riskreg_cens)
