Better handling of formula specials (`design`). New methods `weights.design`, `specials.design`, `offsets.design`

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -6,6 +6,7 @@ S3method(coef,targeted)
 S3method(estimate,ml_model)
 S3method(logLik,targeted)
 S3method(model.matrix,design)
+S3method(offsets,design)
 S3method(plot,calibration)
 S3method(predict,NB)
 S3method(predict,NB2)
@@ -20,6 +21,7 @@ S3method(print,summary.ate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,targeted)
+S3method(specials,design)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
@@ -27,6 +29,7 @@ S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(update,design)
 S3method(vcov,targeted)
+S3method(weights,design)
 export(ML)
 export(NB)
 export(NB2)
@@ -47,6 +50,7 @@ export(expand.list)
 export(isoregw)
 export(ml_model)
 export(nondom)
+export(offsets)
 export(pava)
 export(riskreg)
 export(riskreg_cens)
@@ -55,6 +59,7 @@ export(riskreg_mle)
 export(scoring)
 export(softmax)
 export(solve_ode)
+export(specials)
 export(specify_ode)
 import(Rcpp)
 import(methods)
