--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -98,6 +98,7 @@ importFrom(stats,glm.fit)
 importFrom(stats,lm)
 importFrom(stats,lm.fit)
 importFrom(stats,lm.wfit)
+importFrom(stats,model.extract)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.offset)
@@ -112,6 +113,7 @@ importFrom(stats,terms)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
+importFrom(stats,weights)
 importFrom(survival,survfit)
 importFrom(utils,head)
 importFrom(utils,tail)
