--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -2,7 +2,7 @@ Package: targeted
 Type: Package
 Title: Targeted Inference
 Version: 0.6
-Date: 2024-04-15
+Date: 2024-10-30
 Authors@R: c(person(given = "Klaus K.",
                     family = "Holst",
                     role = c("aut", "cre"),
@@ -29,6 +29,8 @@ Imports:
     digest,
     futile.logger,
     future.apply,
+    glmnet,
+    nnls,
     optimx,
 	progressr,
     methods,
@@ -37,7 +39,9 @@ Imports:
     Rcpp (>= 1.0.0),
     survival
 Suggests:
+    e1071,
     grf,
+    hal9001,
     mgcv,
     testthat (>= 0.11),
     rmarkdown,
