--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -85,10 +85,6 @@ import(methods)
 importFrom(R6,R6Class)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
-importFrom(digest,sha1)
-importFrom(futile.logger,flog.debug)
-importFrom(futile.logger,flog.info)
-importFrom(futile.logger,flog.warn)
 importFrom(grDevices,nclass.Sturges)
 importFrom(graphics,abline)
 importFrom(graphics,lines)
@@ -101,6 +97,8 @@ importFrom(lava,getoutcome)
 importFrom(lava,na.pass0)
 importFrom(lava,score)
 importFrom(optimx,optimx)
+importFrom(rlang,call_match)
+importFrom(rlang,hash)
 importFrom(stats,.getXlevels)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
