--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,16 +20,21 @@ S3method(print,cross_validated)
 S3method(print,summary.ate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
+S3method(print,superlearner)
 S3method(print,targeted)
+S3method(score,cross_validated)
+S3method(score,predictor_sl)
 S3method(specials,design)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
+S3method(summary,predictor_sl)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,design)
+S3method(weights,predictor_sl)
 export(ML)
 export(NB)
 export(NB2)
@@ -52,6 +57,20 @@ export(ml_model)
 export(nondom)
 export(offsets)
 export(pava)
+export(predictor)
+export(predictor_gam)
+export(predictor_glm)
+export(predictor_glmnet)
+export(predictor_grf)
+export(predictor_grf_binary)
+export(predictor_hal)
+export(predictor_isoreg)
+export(predictor_sl)
+export(predictor_xgboost)
+export(predictor_xgboost_binary)
+export(predictor_xgboost_count)
+export(predictor_xgboost_cox)
+export(predictor_xgboost_multiclass)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
@@ -66,10 +85,6 @@ import(methods)
 importFrom(R6,R6Class)
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
-importFrom(digest,sha1)
-importFrom(futile.logger,flog.debug)
-importFrom(futile.logger,flog.info)
-importFrom(futile.logger,flog.warn)
 importFrom(grDevices,nclass.Sturges)
 importFrom(graphics,abline)
 importFrom(graphics,lines)
@@ -80,7 +95,10 @@ importFrom(lava,Inverse)
 importFrom(lava,estimate)
 importFrom(lava,getoutcome)
 importFrom(lava,na.pass0)
+importFrom(lava,score)
 importFrom(optimx,optimx)
+importFrom(rlang,call_match)
+importFrom(rlang,hash)
 importFrom(stats,.getXlevels)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
