--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -7,11 +7,15 @@ Authors@R: c(person(given = "Klaus K.",
                     family = "Holst",
                     role = c("aut", "cre"),
                     email = "klaus@holst.it"),
+             person(given = "Benedikt",
+                    family = "Sommer",
+                    role = c("aut"),
+                    email = "benediktsommer92@gmail.com")
              person(given = "Andreas",
                     family = "Nordland",
                     role = c("aut"),
                     email = "andreasnordland@gmail.com"))
-Author: Klaus K. Holst [aut, cre], Andreas Nordland [aut]
+Author: Klaus K. Holst [aut, cre], Benedikt Sommer [aut], Andreas Nordland [aut]
 Maintainer: Klaus K. Holst <klaus@holst.it>
 Description: Various methods for targeted and semiparametric inference including
 	     augmented inverse probability weighted (AIPW) estimators for missing data and
