develop: switch from `testthat` to `tinytest` for unit testing of R package

--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(person(given = "Klaus K.",
              person(given = "Benedikt",
                     family = "Sommer",
                     role = c("aut"),
-                    email = "benediktsommer92@gmail.com")
+                    email = "benediktsommer92@gmail.com"),
              person(given = "Andreas",
                     family = "Nordland",
                     role = c("aut"),
@@ -46,7 +46,7 @@ Suggests:
     hal9001,
     mgcv,
     nnls,
-    testthat (>= 0.11),
+    tinytest,
     rmarkdown,
     scatterplot3d,
     SuperLearner (>= 2.0-28),
