--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -93,7 +93,9 @@ importFrom(graphics,points)
 importFrom(lava,IC)
 importFrom(lava,Inverse)
 importFrom(lava,estimate)
+importFrom(lava,expit)
 importFrom(lava,getoutcome)
+importFrom(lava,logit)
 importFrom(lava,na.pass0)
 importFrom(lava,score)
 importFrom(optimx,optimx)
