--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(person(given = "Klaus K.",
              person(given = "Benedikt",
                     family = "Sommer",
                     role = c("aut"),
-                    email = "benediktsommer92@gmail.com")
+                    email = "benediktsommer92@gmail.com"),
              person(given = "Andreas",
                     family = "Nordland",
                     role = c("aut"),
