export cumhaz and perform minor formatting to cumhaz.R

--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -49,6 +49,7 @@ export(calibration)
 export(cate)
 export(cate_link)
 export(crr)
+export(cumhaz)
 export(cv)
 export(design)
 export(expand.list)
@@ -84,6 +85,7 @@ import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
 importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,is.data.table)
 importFrom(grDevices,nclass.Sturges)
 importFrom(graphics,abline)
