--- a/.github/workflows/target_check.yaml
+++ b/.github/workflows/target_check.yaml
@@ -45,7 +45,7 @@ jobs:
           submodules: recursive
       - name: Install dependencies
         run: |
-          sudo apt-get install -y lcov
+          sudo apt-get install -y lcov libblas-dev liblapack-dev
       - name: Unit tests
         run: |
           make test
