--- a/R-package/targeted/NAMESPACE
+++ b/R-package/targeted/NAMESPACE
@@ -2,11 +2,13 @@
 
 S3method(IC,targeted)
 S3method(coef,cross_validated)
+S3method(coef,summary.truncatedscore)
 S3method(coef,targeted)
 S3method(estimate,ml_model)
 S3method(logLik,targeted)
 S3method(model.matrix,design)
 S3method(offsets,design)
+S3method(parameter,summary.truncatedscore)
 S3method(plot,calibration)
 S3method(predict,NB)
 S3method(predict,NB2)
@@ -20,6 +22,7 @@ S3method(print,cross_validated)
 S3method(print,summary.ate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
+S3method(print,summary.truncatedscore)
 S3method(print,superlearner)
 S3method(print,targeted)
 S3method(score,cross_validated)
@@ -31,6 +34,7 @@ S3method(summary,design)
 S3method(summary,predictor_sl)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
+S3method(summary,truncatedscore)
 S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,design)
@@ -51,6 +55,7 @@ export(cate_link)
 export(crr)
 export(cv)
 export(design)
+export(estimate_truncatedscore)
 export(expand.list)
 export(isoregw)
 export(ml_model)
@@ -97,6 +102,7 @@ importFrom(lava,expit)
 importFrom(lava,getoutcome)
 importFrom(lava,logit)
 importFrom(lava,na.pass0)
+importFrom(lava,parameter)
 importFrom(lava,score)
 importFrom(optimx,optimx)
 importFrom(rlang,call_match)
@@ -106,6 +112,7 @@ importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,cov2cor)
 importFrom(stats,delete.response)
 importFrom(stats,density)
 importFrom(stats,deriv)
@@ -125,11 +132,13 @@ importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
+importFrom(stats,pchisq)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reformulate)
 importFrom(stats,runif)
 importFrom(stats,terms)
+importFrom(stats,uniroot)
 importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
