--- a/.github/workflows/r_check.yaml
+++ b/.github/workflows/r_check.yaml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          install.packages(c("remotes","covr","pkgdown"), repos="https://cloud.r-project.org")
+          install.packages(c("remotes","covr","pkgdown","rcmdcheck"), repos="https://cloud.r-project.org")
           remotes::install_deps("R-package/targeted", dep=T, upgrade=T)
         shell: Rscript {0}
       - name: Check
