--- a/.github/workflows/r_check.yaml
+++ b/.github/workflows/r_check.yaml
@@ -1,7 +1,10 @@
 # runs r cmd check + unit tests in inst/tinytest
 name: r-cmd-check
 
-on: [push]
+on:
+  pull_request:
+    branches: [dev]
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
   r-cmd-check:
