fix typo in drat call

--- a/.github/workflows/r_deploy.yaml
+++ b/.github/workflows/r_deploy.yaml
@@ -49,11 +49,11 @@ jobs:
         run: |
           rm -Rf tmp; mkdir -p tmp/targeted
           git archive HEAD | (cd tmp/targeted; tar x )
-          cd tmp; R CMD build targeted
+          R CMD build tmp/targeted
 
       - name: Setting up R repository
         run: |
-          echo 'drat::insertPackage(action="archive", repodir="www/pkg", file=paste0("tmp/", list.files("tmp/", "gz$")))' | R --no-save --no-restore --silent
+          echo 'drat::insertPackage(action="archive", repodir="www/pkg", list.files("./", "gz$"))' | R --no-save --no-restore --silent
 
       - name: Deploy
         run: |
