--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_hal)
 export(predictor_isoreg)
+export(predictor_nb)
 export(predictor_sl)
 export(predictor_xgboost)
 export(predictor_xgboost_binary)
