--- a/.github/workflows/r_check.yaml
+++ b/.github/workflows/r_check.yaml
@@ -1,7 +1,7 @@
 # runs r cmd check + unit tests in inst/tinytest
 on:
   pull_request:
-    branches: [main, develop]
+    branches: [main, dev]
 
 name: r-cmd-check
 
