--- a/.github/workflows/target_check.yaml
+++ b/.github/workflows/target_check.yaml
@@ -1,9 +1,10 @@
 name: target library tests
 
-on: [push]
+on:
+  pull_request:
+    branches: [main, dev]
 
 jobs:
-
   cpp_library:
     runs-on: ubuntu-latest
     steps:
