--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,11 +9,17 @@
 ^tmp$
 ^Makefile$
 ^src/target/lib$
+^src/target/build$
+^src/target/doc$
+^src/target/misc$
+^src/target/tests$
+^src/target/config$
 ^README\.Rmd$
 ^LICENSE$
 ^examples$
 ^TODO$
 ^doc$
+^www$
 ^Meta$
 ^_pkgdown\.yml$
 ^.codecov.yml
