--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,6 @@ S3method(print,superlearner)
 S3method(print,targeted)
 S3method(score,cross_validated)
 S3method(score,predictor_sl)
-S3method(specials,design)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
@@ -34,6 +33,7 @@ S3method(summary,predictor_sl)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(summary,truncatedscore)
+S3method(terms,design)
 S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,predictor_sl)
@@ -80,7 +80,6 @@ export(riskreg_mle)
 export(scoring)
 export(softmax)
 export(solve_ode)
-export(specials)
 export(specify_ode)
 import(Rcpp)
 import(methods)
