--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(specify_ode)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
+importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,is.data.table)
 importFrom(grDevices,nclass.Sturges)
