--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,8 @@ export(scoring)
 export(softmax)
 export(solve_ode)
 export(specify_ode)
+export(tune)
+export(tuner)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
