--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: targeted
 Type: Package
 Title: Targeted Inference
 Version: 0.6
-Date: 2024-10-30
+Date: 2025-04-29
 Authors@R: c(person(given = "Klaus K.",
                     family = "Holst",
                     role = c("aut", "cre"),
@@ -58,7 +58,7 @@ Suggests:
     viridisLite,
     xgboost
 BugReports: https://github.com/kkholst/targeted/issues
-SystemRequirements: C++11
+SystemRequirements: C++11, GNU make
 URL: https://kkholst.github.io/targeted/
 License: Apache License (== 2.0)
 LinkingTo: Rcpp, RcppArmadillo
