--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,7 +67,9 @@ export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_hal)
 export(predictor_isoreg)
+export(predictor_mars)
 export(predictor_sl)
+export(predictor_svm)
 export(predictor_xgboost)
 export(predictor_xgboost_binary)
 export(predictor_xgboost_count)
