nicer print method for summary.predictor_sl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
 S3method(print,summary.ate.targeted)
+S3method(print,summary.predictor_sl)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,summary.truncatedscore)
