re-export ML function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ S3method(terms,design)
 S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,predictor_sl)
+export(ML)
 export(NB)
 export(NB2)
 export(RATE)
