feature(predictor): adding `predictor_nb` (Naive-Bayes)  (#58)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_hal)
 export(predictor_isoreg)
+export(predictor_nb)
 export(predictor_sl)
 export(predictor_xgboost)
 export(predictor_xgboost_binary)
