--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,9 @@ Suggests:
     SuperLearner (>= 2.0-28),
     knitr,
     xgboost,
-    viridisLite
+    viridisLite,
+    randomForestSRC,
+    ranger
 BugReports: https://github.com/kkholst/targeted/issues
 SystemRequirements: C++11, GNU make
 URL: https://kkholst.github.io/targeted/
