--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,7 +60,6 @@ export(isoregw)
 export(ml_model)
 export(nondom)
 export(pava)
-export(predictor)
 export(predictor_gam)
 export(predictor_glm)
 export(predictor_glmnet)
@@ -69,6 +68,7 @@ export(predictor_grf_binary)
 export(predictor_hal)
 export(predictor_isoreg)
 export(predictor_mars)
+export(predictor_nb)
 export(predictor_sl)
 export(predictor_svm)
 export(predictor_xgboost)
