--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,7 +86,7 @@ export(specify_ode)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
-importFrom(data.table,':=')
+importFrom(data.table,":=")
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
 importFrom(data.table,is.data.table)
