feature: improved `riskreg_cens` estimator (#62)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,6 +52,8 @@ Suggests:
     hal9001,
     knitr,
     mgcv,
+    randomForestSRC,
+    ranger,
     riskRegression,
     rmarkdown,
     scatterplot3d,
