--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(calibration)
 export(cate)
 export(cate_link)
 export(crr)
+export(cumhaz)
 export(cv)
 export(design)
 export(estimate_truncatedscore)
@@ -87,7 +88,9 @@ export(specify_ode)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
+importFrom(data.table,":=")
 importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,is.data.table)
 importFrom(grDevices,nclass.Sturges)
 importFrom(graphics,abline)
