--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,8 @@ S3method(predict,riskreg.targeted)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
+S3method(print,cross_validated.predictor_sl)
 S3method(print,summary.ate.targeted)
-S3method(print,summary.predictor_sl)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,summary.truncatedscore)
@@ -30,7 +30,6 @@ S3method(score,predictor_sl)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
-S3method(summary,predictor_sl)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(summary,truncatedscore)
