--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.offset)
 importFrom(stats,model.response)
+importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,pchisq)
@@ -138,6 +139,7 @@ importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reformulate)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,terms)
 importFrom(stats,uniroot)
 importFrom(stats,update)
