--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,6 @@ export(predictor_hal)
 export(predictor_isoreg)
 export(predictor_mars)
 export(predictor_nb)
-export(predictor_sl)
 export(predictor_svm)
 export(predictor_xgboost)
 export(predictor_xgboost_binary)
@@ -85,6 +84,7 @@ export(scoring)
 export(softmax)
 export(solve_ode)
 export(specify_ode)
+export(superlearner)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
