new learner class replaces ml_model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(IC,targeted)
 S3method(coef,cross_validated)
 S3method(coef,summary.truncatedscore)
 S3method(coef,targeted)
+S3method(estimate,learner)
 S3method(estimate,ml_model)
 S3method(logLik,targeted)
 S3method(model.matrix,design)
@@ -13,6 +14,7 @@ S3method(predict,NB)
 S3method(predict,NB2)
 S3method(predict,calibration)
 S3method(predict,density)
+S3method(predict,learner)
 S3method(predict,ml_model)
 S3method(predict,riskreg.targeted)
 S3method(print,NB)
@@ -58,6 +60,7 @@ export(design)
 export(estimate_truncatedscore)
 export(expand.list)
 export(isoregw)
+export(learner)
 export(ml_model)
 export(nondom)
 export(pava)
