changing how superlearner assigns names to unnamed values in learner.list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(predict,calibration)
 S3method(predict,density)
 S3method(predict,ml_model)
 S3method(predict,riskreg.targeted)
+S3method(predict,superlearner)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
