move s3 methods for predictor_sl to superlearner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,7 @@ S3method(print,summary.truncatedscore)
 S3method(print,superlearner)
 S3method(print,targeted)
 S3method(score,cross_validated)
-S3method(score,predictor_sl)
+S3method(score,superlearner)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
@@ -40,7 +40,7 @@ S3method(summary,truncatedscore)
 S3method(terms,design)
 S3method(update,design)
 S3method(vcov,targeted)
-S3method(weights,predictor_sl)
+S3method(weights,superlearner)
 export(ML)
 export(NB)
 export(NB2)
