develop(superlearner): improved documentation for `superlearner` and new `predict.superlearner` s3 method  (#70)
* changing how superlearner assigns names to unnamed values in learner.list
* changing argument names of superlearner from model.list to learners
* predict.superlearner tests and documentation
* move s3 methods for predictor_sl to superlearner
* simple tests for superlearner s3 methods
* document referenced s3 superlearner methods
* tests that all learners have the same response variable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(predict,density)
 S3method(predict,learner)
 S3method(predict,ml_model)
 S3method(predict,riskreg.targeted)
+S3method(predict,superlearner)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
@@ -28,7 +29,7 @@ S3method(print,summary.truncatedscore)
 S3method(print,superlearner)
 S3method(print,targeted)
 S3method(score,cross_validated)
-S3method(score,predictor_sl)
+S3method(score,superlearner)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
@@ -39,7 +40,7 @@ S3method(summary,truncatedscore)
 S3method(terms,design)
 S3method(update,design)
 S3method(vcov,targeted)
-S3method(weights,predictor_sl)
+S3method(weights,superlearner)
 export(ML)
 export(NB)
 export(NB2)
@@ -88,6 +89,7 @@ export(scoring)
 export(softmax)
 export(solve_ode)
 export(specify_ode)
+export(superlearner)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
