--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,11 +63,11 @@ export(expand.list)
 export(isoregw)
 export(learner)
 export(learner_glm)
+export(learner_glmnet)
 export(ml_model)
 export(nondom)
 export(pava)
 export(predictor_gam)
-export(predictor_glmnet)
 export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_hal)
