cv as a generic method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(IC,targeted)
 S3method(coef,cross_validated)
 S3method(coef,summary.truncatedscore)
 S3method(coef,targeted)
+S3method(cv,default)
+S3method(cv,predictor_sl)
 S3method(estimate,learner)
 S3method(estimate,ml_model)
 S3method(logLik,targeted)
