--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(expand.list)
 export(isoregw)
 export(learner)
 export(learner_glm)
+export(learner_hal)
 export(ml_model)
 export(nondom)
 export(pava)
@@ -70,7 +71,6 @@ export(predictor_gam)
 export(predictor_glmnet)
 export(predictor_grf)
 export(predictor_grf_binary)
-export(predictor_hal)
 export(predictor_isoreg)
 export(predictor_mars)
 export(predictor_nb)
