--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,7 +63,7 @@ export(expand.list)
 export(isoregw)
 export(learner)
 export(learner_glm)
-export(learner_glmnet)
+export(learner_glmnet_cv)
 export(ml_model)
 export(nondom)
 export(pava)
