renaming predictor_gam

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,11 +62,11 @@ export(estimate_truncatedscore)
 export(expand.list)
 export(isoregw)
 export(learner)
+export(learner_gam)
 export(learner_glm)
 export(ml_model)
 export(nondom)
 export(pava)
-export(predictor_gam)
 export(predictor_glmnet)
 export(predictor_grf)
 export(predictor_grf_binary)
