feat(cv): cv method for superlearner objects (#64)
* cv method now handles predictor_sl objects separately
* cv as a generic method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(IC,targeted)
 S3method(coef,cross_validated)
 S3method(coef,summary.truncatedscore)
 S3method(coef,targeted)
+S3method(cv,default)
+S3method(cv,predictor_sl)
 S3method(estimate,learner)
 S3method(estimate,ml_model)
 S3method(logLik,targeted)
@@ -21,8 +23,8 @@ S3method(predict,superlearner)
 S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
+S3method(print,cross_validated.predictor_sl)
 S3method(print,summary.ate.targeted)
-S3method(print,summary.predictor_sl)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,summary.truncatedscore)
@@ -33,7 +35,6 @@ S3method(score,superlearner)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
-S3method(summary,predictor_sl)
 S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(summary,truncatedscore)
