--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,13 +63,14 @@ export(estimate_truncatedscore)
 export(expand.list)
 export(isoregw)
 export(learner)
+export(learner_gam)
 export(learner_glm)
+export(learner_glmnet_cv)
 export(learner_sl)
 export(ml_model)
 export(nondom)
 export(pava)
 export(predictor_gam)
-export(predictor_glmnet)
 export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_hal)
