feature: renaming `predictor_hal` into `learner_hal` (#75)
* don't run examples for learner_hal because of computational time
* moving learners and unit tests to separate files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,14 +66,13 @@ export(learner)
 export(learner_gam)
 export(learner_glm)
 export(learner_glmnet_cv)
+export(learner_hal)
 export(learner_sl)
 export(ml_model)
 export(nondom)
 export(pava)
-export(predictor_gam)
 export(predictor_grf)
 export(predictor_grf_binary)
-export(predictor_hal)
 export(predictor_isoreg)
 export(predictor_mars)
 export(predictor_nb)
