--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(learner)
 export(learner_gam)
 export(learner_glm)
 export(learner_glmnet_cv)
+export(learner_mars)
 export(learner_sl)
 export(ml_model)
 export(nondom)
@@ -75,7 +76,6 @@ export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_hal)
 export(predictor_isoreg)
-export(predictor_mars)
 export(predictor_nb)
 export(predictor_svm)
 export(predictor_xgboost)
