--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,11 @@ export(learner_glm)
 export(learner_glmnet_cv)
 export(learner_hal)
 export(learner_sl)
+export(learner_xgboost)
+export(learner_xgboost_binary)
+export(learner_xgboost_count)
+export(learner_xgboost_cox)
+export(learner_xgboost_multiclass)
 export(ml_model)
 export(nondom)
 export(pava)
@@ -77,11 +82,6 @@ export(predictor_isoreg)
 export(predictor_mars)
 export(predictor_nb)
 export(predictor_svm)
-export(predictor_xgboost)
-export(predictor_xgboost_binary)
-export(predictor_xgboost_count)
-export(predictor_xgboost_cox)
-export(predictor_xgboost_multiclass)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
