--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(learner_glmnet_cv)
 export(learner_hal)
 export(learner_mars)
 export(learner_sl)
+export(learner_xgboost)
 export(ml_model)
 export(nondom)
 export(pava)
@@ -77,11 +78,6 @@ export(predictor_grf_binary)
 export(predictor_isoreg)
 export(predictor_nb)
 export(predictor_svm)
-export(predictor_xgboost)
-export(predictor_xgboost_binary)
-export(predictor_xgboost_count)
-export(predictor_xgboost_cox)
-export(predictor_xgboost_multiclass)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
