--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(learner_gam)
 export(learner_glm)
 export(learner_glmnet_cv)
 export(learner_hal)
+export(learner_isoreg)
 export(learner_mars)
 export(learner_sl)
 export(ml_model)
@@ -74,7 +75,6 @@ export(nondom)
 export(pava)
 export(predictor_grf)
 export(predictor_grf_binary)
-export(predictor_isoreg)
 export(predictor_nb)
 export(predictor_svm)
 export(predictor_xgboost)
