--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(learner_glmnet_cv)
 export(learner_hal)
 export(learner_mars)
 export(learner_sl)
+export(learner_svm)
 export(learner_xgboost)
 export(ml_model)
 export(nondom)
@@ -77,7 +78,6 @@ export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_isoreg)
 export(predictor_nb)
-export(predictor_svm)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
