--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ S3method(print,NB)
 S3method(print,calibration)
 S3method(print,cross_validated)
 S3method(print,cross_validated.learner_sl)
+S3method(print,summarized_learner)
 S3method(print,summary.ate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
