--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(learner_glmnet_cv)
 export(learner_hal)
 export(learner_isoreg)
 export(learner_mars)
+export(learner_nb)
 export(learner_sl)
 export(learner_xgboost)
 export(ml_model)
@@ -76,7 +77,6 @@ export(nondom)
 export(pava)
 export(predictor_grf)
 export(predictor_grf_binary)
-export(predictor_nb)
 export(predictor_svm)
 export(riskreg)
 export(riskreg_cens)
